--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.21.3",
     "resolve": "^1.20.0",
