--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.21.3",
+    "react-top-loading-bar": "^2.3.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
